--- a/index.html
+++ b/index.html
@@ -150,6 +150,30 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12087.361190799931!2d-111.59135758022461!3d40.76553715000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752699adf04f0c9%3A0x5164d2fa4cf67ff8!2s9054%20Lariat%20Cir%2C%20Park%20City%2C%20UT%2084098!5e0!3m2!1sen!2sus!4v1635018665361!5m2!1sen!2sus"
+       width="400" 
+       height="400" 
+       style="border:0;" 
+       allowfullscreen="" 
+       loading="lazy">
+      </iframe>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br/>
+          Some Town, Ca <br/>
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
+    </div>
   </section>
 
   <!-- footer -->
