--- a/index.html
+++ b/index.html
@@ -72,12 +72,15 @@
   <section id="what-we-do" class="intro">
     <h2 class="section-title primary-border">What We Do</h2>
     <p>
-      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
+      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
+      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+      sustainable Intelligentsia umami deep v craft
     </p>
   </section>
 
   <!-- "what you do" section -->
-  <section id="what-you-do" class="steps" >
+  <section id="what-you-do" class="steps">
     <h2 class="section-title secondary-border">What You Do</h2>
 
     <div>
@@ -88,75 +91,78 @@
 
     <div>
       <img src="./assets/images/step-2.svg" alt="" />
-      <h3>Step 2: <span>Consult with One of Our Trainers</span></h3>
+      <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
       <p>Are you here to build muscle, lose weight, or just feel good?</p>
     </div>
 
     <div>
       <img src="./assets/images/step-3.svg" alt="" />
-      <h3>Step 3: <span>Get Running</span></h3>
+      <h3>Step 3: <span>Get Running.</span></h3>
       <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
 
     <div>
       <img src="./assets/images/step-4.svg" alt="" />
       <h3>Step 4: <span>See Results.</span></h3>
-      <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+      <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
   </section>
 
   <!-- "meet the trainers" section -->
   <section id="your-trainers" class="trainers">
-    <h2 class="section-title primary-border" >
-    Meet The Trainers
-  </h2>
-  <article class="trainer">
-    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-    <div class="trainer-bio text-left" >
-      <h3>Arron Stephens</h3>
-      <h4>Speed / Strength</h4>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-      </p>
-    </div>
-  </article>
-  <!-- second trainer bio -->
-<article class="trainer">
-  <div class="trainer-bio text-right">
-    <h3>Joanna Gill</h3>
-    <h4>Endurance</h4>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-    </p>
-  </div>
-  <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-</article>
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
+    <article class="trainer">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
 
-<!-- third trainer bio -->
-<article class="trainer">
-  <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-  <div class="trainer-bio text-left">
-    <h3>Harry "the Headband" Smith</h3>
-    <h4>Strength</h4>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-    </p>
-  </div>
-</article>  
+    <!-- second trainer bio -->
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+
+    <!-- third trainer bio -->
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
   </section>
 
   <!-- "reach out" section -->
   <section id="reach-out" class="contact">
     <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12087.361190799931!2d-111.59135758022461!3d40.76553715000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752699adf04f0c9%3A0x5164d2fa4cf67ff8!2s9054%20Lariat%20Cir%2C%20Park%20City%2C%20UT%2084098!5e0!3m2!1sen!2sus!4v1635018665361!5m2!1sen!2sus"
-       width="400" 
-       height="400" 
-       style="border:0;" 
-       allowfullscreen="" 
-       loading="lazy">
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.1079747227936!2d-120.42364418397035!3d37.92790791110593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c49129b6ac57%3A0xb56c7eb95a2cd8bd!2sMain%20St%2C%20California%2095327!5e0!3m2!1sen!2sus!4v1616426329495!5m2!1sen!2sus"
+        style="border:0;" 
+        allowfullscreen=""
+        loading="lazy">
       </iframe>
       <div>
         <h3>Run Buddy</h3>
@@ -166,10 +172,10 @@
           Let us know and we'll be happy to talk to you!
         </p>
         <address>
-          55 Main Street <br/>
-          Some Town, Ca <br/>
+          55 Main Street <br />
+          Some Town, Ca <br />
           12345<br />
-          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          P: 555.RUN.BUDZ (555.786.2839)<br />
           E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
       </div>
@@ -180,7 +186,7 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
     <div>
-      <a href="#">Read Our Privacy Policy</a><br />
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
       &copy; 2019 Run Buddy, Inc.
     </div>
   </footer>
